--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,11 @@
       <version>31.1-jre</version>
     </dependency>
 
-
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>1.2.11</version>
+    </dependency>
 
   </dependencies>
 
